brand/website/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    name: production
    app.kubernetes.io/name: candlefish-website
    app.kubernetes.io/component: namespace
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  labels:
    name: staging
    app.kubernetes.io/name: candlefish-website
    app.kubernetes.io/component: namespace
